# ADDY

./: .gitignore  build.sh  db.sh  pyproject.toml  run.sh  server.sh  test.sh
docs/: Eraser.txt  SQL.txt
src/: ADDY.sql
src/database/: models.py  my_connector.py
src/jwt_cookie/: session_manager.py  settings.py
src/pipeline/: server.py  test.py
src/repository/: agent_learning_data_repository.py  agent_simulation_feedbcak_repository.py  agent_simulation_messages_repository.py  agents_simulations_repository.py  chat_conversations_repository.py  chat_messages_repository.py  matches_repository.py  profile_details_repository.py  user_agents_repository.py  user_conversation_feedback_repository.py  user_likes_repository.py  user_preferences_repository.py  user_repository.py  user_sessions_repository.py
src/scripts/: check_env.sh
src/services/: agent_learning_data_services.py  agent_simulation_feedback_services.py  agent_simulation_messages_services.py  agents_simulations_services.py  chat_conversations_services.py  chat_messages_services.py  cookie_services.py  matches_services.py  mathes_services.py  profile_details_services.py  user_agents_services.py  user_conversation_feedback_services.py  user_likes_services.py  user_preferences_services.py  user_services.py  user_sessions_services.py
src/utils/: config_parser.py  create_sql.py  custom_logging.py  env.py  exam_services.py  list_to_str.py  validation.py  write_file_into_server.py
